--- a/land/Cargo.toml
+++ b/land/Cargo.toml
@@ -1,23 +1,20 @@
 [package]
-name = "non-fungible-token"
-version = "1.1.0"
-authors = ["Near Inc <hello@near.org>"]
+name = "nft_simple"
+version = "0.1.0"
+authors = ["Near Inc <hello@nearprotocol.com>"]
 edition = "2018"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-near-sdk = "3.1.0"
+near-sdk = "=3.1.0"
 hex = "0.4.3"
-near-contract-standards = "3.1.1"
 
 [profile.release]
-codegen-units = 1
-# Tell `rustc` to optimize for small code size.
+codegen-units=24
 opt-level = "z"
 lto = true
 debug = false
 panic = "abort"
-# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
 overflow-checks = true
